--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -170,13 +170,136 @@
                 </div>
                 <div class="row">
                     <div class="col-1-of-3">
-                        col 1 of 3 
+                        <div class="card">
+                            <div class="card__side card__side--front">
+                                <div class="card__picture card__picture--1">
+                                    &nbsp;
+                                </div>
+                                <h4 class="card__heading">
+                                    <span class="card__heading-span card__heading-span--1">
+                                        The Sea Explorer
+                                    </span>
+                                </h4>
+                                <div class="card__details">
+                                    <ul>
+                                        <li>3 day tours</li>
+                                        <li>up to 30 people</li>
+                                        <li>2 tour guide</li>
+                                        <li>sleep in cozy hotels</li>
+                                        <li>other info</li>
+                                    </ul>
+                                </div>                            </div>
+                            <div class="card__side card__side--back card__side--back-1">
+                                <div class="card__cta">
+                                    <div class="card__price-box">
+                                        <p class="card__price-only">
+                                            only
+                                        </p>
+                                        <p class="card__price-value">
+                                            $297
+                                        </p>
+                                        <a href="#" class="btn btn--white">book now</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-1-of-3">
-                        col 1 of 3
+                        <div class="card">
+                            <div class="card__side card__side--front">
+                                <div class="card__picture card__picture--2">
+                                    &nbsp;
+                                </div>
+                                <h4 class="card__heading">
+                                    <span class="card__heading-span card__heading-span--2">
+                                        The Sea Explorer
+                                    </span>
+                                </h4>
+                                <div class="card__details">
+                                    <ul>
+                                        <li>3 day tours</li>
+                                        <li>up to 30 people</li>
+                                        <li>2 tour guide</li>
+                                        <li>sleep in cozy hotels</li>
+                                        <li>other info</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="card__side card__side--back card__side--back-2">
+                                <div class="card__cta">
+                                    <div class="card__price-box">
+                                        <p class="card__price-only">
+                                            only
+                                        </p>
+                                        <p class="card__price-value">
+                                            $297
+                                        </p>
+                                        <a href="#" class="btn btn--white">book now</a>
+                                    </div>
+                                </div>                           
+                            </div>
+                        </div>                    
                     </div>
                     <div class="col-1-of-3">
-                        col 1of 3
+                        <div class="card">
+                            <div class="card__side card__side--front">
+                                <div class="card__picture card__picture--3">
+                                    &nbsp;
+                                </div>
+                                <h4 class="card__heading">
+                                    <span class="card__heading-span card__heading-span--3">
+                                        The Sea Explorer
+                                    </span>
+                                </h4>
+                                <div class="card__details">
+                                    <ul>
+                                        <li>3 day tours</li>
+                                        <li>up to 30 people</li>
+                                        <li>2 tour guide</li>
+                                        <li>sleep in cozy hotels</li>
+                                        <li>other info</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="card__side card__side--back card__side--back-3">
+                                <div class="card__cta">
+                                    <div class="card__price-box">
+                                        <p class="card__price-only">
+                                            only
+                                        </p>
+                                        <p class="card__price-value">
+                                            $297
+                                        </p>
+                                        <a href="#" class="btn btn--white">book now</a>
+                                    </div>
+                                </div>
+                            </div>                            
+                        </div>                    
+                    </div>
+                </div>
+                <div class="u-center-text u-margin-bottom-small">
+                    <a href="#" class="btn btn--green">Discover all tours</a>
+                </div>
+            </section>
+
+            <section class="section-stories">
+                <div class="u-center-text u-margin-bottom-big">
+                    <h2 class="heading-secondary u-margin-bottom-big">
+                        We make people genuinely happy
+                    </h2>
+                    <div class="row">
+                        <div class="story">
+                            <figure class="story__shape">
+                                <img src="img/nat-8.jpg" alt="person in tour" class="story__img">
+                                <figcaption class="story__caption">mary smith</figcaption>
+                            </figure>
+                            <div class="story__text">
+                                <h3 class="heading-tertiary u-margin-bottom-small">i had the best weekend with my family</h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco. Ut enim ad minim veniam, quis nostrud exercitation ullamco. Ut enim ad minim veniam, quis nostrud exercitation ullamco.
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
