--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -283,6 +283,13 @@
             </section>
 
             <section class="section-stories">
+                <div class="bg-video">
+                    <video class="bg-video__content" autoplay muted loop>
+                        <source src="img/video.mp4" type="video/mp4">
+                        <source src="img/video.webm" type="video/webm">
+                        Your browser is not supported!
+                    </video>
+                </div>
                 <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary u-margin-bottom-big">
                         We make people genuinely happy
@@ -301,8 +308,91 @@
                             </div>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="story">
+                            <figure class="story__shape">
+                                <img src="img/nat-9.jpg" alt="person in tour" class="story__img">
+                                <figcaption class="story__caption">Koishi</figcaption>
+                            </figure>
+                            <div class="story__text">
+                                <h3 class="heading-tertiary u-margin-bottom-small">my life is very different</h3>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco. Ut enim ad minim veniam, quis nostrud exercitation ullamco. Ut enim ad minim veniam, quis nostrud exercitation ullamco.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="u-center-text u-margin-top-big">
+                        <a href="#" class="btn-text">Read all stories &rarr;</a>
+                    </div>
+                </div>
+            </section>
+            <section class="section-book">
+                <div class="row">
+                    <div class="book">
+                        <div class="book__form">
+                            <form action="#" class="form">
+                                <div class="u-margin-bottom-small u-center-text">
+                                    <h3 class="heading-secondary">Booking Now
+                                    </h3>
+                                </div>
+                                <div class="form__group">
+                                    <input type="text" class="form__input" placeholder="Fullname" id="name" required>
+                                    <label for="name" class="form__label">Full Name</label>
+                                </div>
+                                <div class="form__group">
+                                    <input type="email" class="form__input" placeholder="email address" id="email" required>
+                                    <label for="email" class="form__label">Email</label>
+                                </div>
+                            </form>
+                            <div class="form__group">
+                                <div class="form__radio-group">
+                                    <input type="radio" class="form__radio-input" id="small" name="size">
+                                    <label for="small" class="form__radio-label">
+                                        <span class="form__radio-button"></span>
+                                        small tour
+                                    </label>
+                                </div>
+                                <div class="form__radio-group">
+                                    <input type="radio" class="form__radio-input" id="large" name="size">
+                                    <label for="large" class="form__radio-label">
+                                        <span class="form__radio-button"></span>
+                                        large tour
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="form__group">
+                                <button class="btn btn--green">
+                                    Next Step &rarr;
+                                </button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
         </main>
+        <footer class="footer">
+            <div class="footer__logo-box">
+                <img src="img/logo-green-2x.png" alt="full logo" class="footer__logo">
+            </div>
+            <div class="row">
+                <div class="col-1-of-2">
+                    <div class="footer__navigation">
+                        <ul class="footer_list">
+                            <li class="footer__item"><a href="#" class="footer__link">comapny</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">comapny</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">comapny</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">comapny</a></li>
+                            <li class="footer__item"><a href="#" class="footer__link">comapny</a></li>                            
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-1-of-2">
+                    <p class="footer__copyright">
+                      Built my <a href="#" class="footer__link">Online course</a>. Copyright &copy;by Kohei Oishi 
+                    </p>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
