lec finished lecture 49 next is 50

--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -14,6 +14,20 @@
         <title>Natours | Exciting tours for adventurous people</title>
     </head>
     <body>
+        <div class="navigation">
+            <input type="checkbox" id="navi-toggle" class="navigation__checkbox">
+            <label for="navi__toggle" class="navigation__button">menu</label>
+            <div class="navigation__background">&nbsp;</div>
+            <nav class="navigation__nav">
+                <ul class="navigation__list">
+                    <li class="gavigation__item"><a href="#" class="navigation__link"><span>01</span> Natours</a></li>
+                    <li class="gavigation__item"><a href="#" class="navigation__link"><span>01</span> Natours</a></li>
+                    <li class="gavigation__item"><a href="#" class="navigation__link"><span>01</span> Natours</a></li>
+                    <li class="gavigation__item"><a href="#" class="navigation__link"><span>01</span> Natours</a></li>
+                    <li class="gavigation__item"><a href="#" class="navigation__link"><span>01</span> Natours</a></li>
+                </ul>
+            </nav>
+        </div>
         <header class="header">
         <div class="header__logo-box">
             <img src="img/logo-white.png" alt="Logo" class="header__logo">
@@ -26,70 +40,6 @@
             <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
         </div>
         </header>
-        <!--
-        <section class="grid-test">
-            <div class="row">
-                <div class="col-1-of-2">
-                    col 1 of 2 
-                </div>
-                <div class="col-1-of-2">
-                    col2 of 2
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-1-of-3">
-                    col 1 of 3 
-                </div>
-                <div class="col-1-of-3">
-                    col 1 of 3
-                </div>
-                <div class="col-1-of-3">
-                    col 1of 3
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-1-of-3">
-                    col 1 of 3 
-                </div>
-                <div class="col-2-of-3">
-                    col 2 of 3
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-1-of-4">
-                    col 1 of 4 
-                </div>
-                <div class="col-1-of-4">
-                    col 1 of 4
-                </div>
-                <div class="col-1-of-4">
-                    col 1 of 4
-                </div>
-                <div class="col-1-of-4">
-                    col 1 of 4
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-1-of-4">
-                    col 1 of 4 
-                </div>
-                <div class="col-1-of-4">
-                    col 1 of 4
-                </div>
-                <div class="col-2-of-4">
-                    col 2 of 4
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-1-of-4">
-                    col 1 of 4 
-                </div>
-                <div class="col-3-of-4">
-                    col 3 of 4
-                </div>
-            </div>
-        </section>
-        -->
         <main>
             <section class="section-about">
                 <div class="u-center-text u-margin-bottom-big">
