--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -16,15 +16,17 @@
     <body>
         <div class="navigation">
             <input type="checkbox" id="navi-toggle" class="navigation__checkbox">
-            <label for="navi__toggle" class="navigation__button">menu</label>
+            <label for="navi__toggle" class="navigation__button">
+                <span class="navigation__icon"></span>
+            </label>
             <div class="navigation__background">&nbsp;</div>
             <nav class="navigation__nav">
                 <ul class="navigation__list">
-                    <li class="gavigation__item"><a href="#" class="navigation__link"><span>01</span> Natours</a></li>
-                    <li class="gavigation__item"><a href="#" class="navigation__link"><span>01</span> Natours</a></li>
-                    <li class="gavigation__item"><a href="#" class="navigation__link"><span>01</span> Natours</a></li>
-                    <li class="gavigation__item"><a href="#" class="navigation__link"><span>01</span> Natours</a></li>
-                    <li class="gavigation__item"><a href="#" class="navigation__link"><span>01</span> Natours</a></li>
+                    <li class="gavigation__item"><a href="#" class="navigation__link"><span>01</span>Natours</a></li>
+                    <li class="gavigation__item"><a href="#" class="navigation__link"><span>01</span>Natours</a></li>
+                    <li class="gavigation__item"><a href="#" class="navigation__link"><span>01</span>Natours</a></li>
+                    <li class="gavigation__item"><a href="#" class="navigation__link"><span>01</span>Natours</a></li>
+                    <li class="gavigation__item"><a href="#" class="navigation__link"><span>01</span>Natours</a></li>
                 </ul>
             </nav>
         </div>
