--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -222,7 +222,7 @@
                                         <p class="card__price-value">
                                             $297
                                         </p>
-                                        <a href="#" class="btn btn--white">book now</a>
+                                        <a href="#popup" class="btn btn--white">book now</a>
                                     </div>
                                 </div>
                             </div>                            
@@ -346,5 +346,22 @@
                 </div>
             </div>
         </footer>
+        <div class="popup" id="popup">
+            <div class="popup__content">
+                <div class="popup__left">
+                    <img src="img/nat-8.jpg" alt="tour photo" class="popup__img">
+                    <img src="img/nat-9.jpg" alt="tour photo" class="popup__img">
+                </div>
+                <div class="popup__right">
+                    <a href="#section-tours" class="popup__close">&times;</a>
+                    <h2 class="heading-secondary u-margin-bottom-small">start booking now</h2>
+                    <h3 class="heading-tertiary u-margin-bottom-small">important!! please read these before booking</h3>
+                    <p class="popup__text u-margin-bottom-medium">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco. Ut enim ad minim veniam, quis nostrud exercitation ullamco. Ut enim ad minim veniam, quis nostrud exercitation ullamco.
+                    </p>
+                    <a href="$" class="btn btn--green">Book now</a>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
